Prod/prod_back.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: backend
  name: back-prod
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - image: nginx:latest
        imagePullPolicy: IfNotPresent
        name: backend
---
apiVersion: v1
kind: Service
metadata:
  name: backend-svc
  namespace: default
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      nodePort: 32183
  selector:
    app: multitool
  type: NodePort
