Prod/prod_db.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: database 
  namespace: default
spec:
  serviceName: "svc-database"
  replicas: 1
  selector:
    matchLabels:
      k8s-app: database
  template:
    metadata:
      labels:
        k8s-app: database
    spec:
      containers:
        - name: database-app
          image: redis:latest
          imagePullPolicy: "IfNotPresent"
          volumeMounts:
            - name: config-volume-pv
              mountPath: /etc/config
              readOnly: true
          resources:
            limits:
              cpu: "2"
              memory: 2Gi
            requests:
              cpu: 200m
              memory: 1000Mi
 
  volumeClaimTemplates:
  - metadata:
      name: config-volume-pv
    spec:
      storageClassName: ""
      accessModes:
        - ReadWriteOnce
      resources:
        requests:
          storage: "2Gi"

---
apiVersion: v1
kind: Service
metadata:
  name: db-svc
  namespace: default
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      nodePort: 32181
  selector:
    app: multitool
  type: NodePort
