Prod/prod_front.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: frontend
  name: frontend
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - image: praqma/network-multitool:alpine-extra
        imagePullPolicy: IfNotPresent
        name: frontend
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-svc
  namespace: default
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      nodePort: 32190
  selector:
    app: multitool
  type: NodePort
